# nb-email-templating

./: .gitignore  Dockerfile  README.md  docker-compose.yml  email_templating_service_127fe83c.plan.md  pyproject.toml  webhook-payloads.md
config/: config.example.yaml
dashboard_templates/: _template_legend.html.j2  config_view.html.j2  events.html.j2  index.html.j2  layout.html.j2  login.html.j2  template_edit.html.j2  template_editor.html.j2  template_legend.html.j2  test_tools.html.j2
docker/: entrypoint.sh  healthcheck.py
email_templates/: _base.html.j2  _fallback.html.j2  alert_aggregate.html.j2  alert_cleared.html.j2  alert_open.html.j2  incident_cleared.html.j2  incident_open.html.j2
src/nb_email_templating/: __init__.py  admin.py  config.py  context.py  dashboard.py  database.py  dedup.py  jinja_filters.py  logger.py  mailer.py  main.py  parser.py  renderer.py  security.py  template_editor.py  testing.py  webhook.py
static/: style.css
tests/: conftest.py  test_config.py  test_context.py  test_jinja_filters.py  test_parser.py  test_template_editor.py  test_webhook.py
